# virtx-api

./: .env  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: user.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/middleware/: auth_middleware.rs
src/routes/: account_routes.rs  auth_routes.rs  mod.rs
src/utils/: app_state.rs  constants.rs  jwt.rs  mod.rs
