[package]
name = "api_unity"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]


[dependencies]

entity = { path = "entity" }
migration = { path = "migration" } 


actix-web = "4.9.0"
env_logger = "0.11.6"
logger = "0.4.0"
sea-orm = { version = "1.1.5", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
serde = { version = "1.0.218", features = ["derive"] }
sha256 = "1.6.0"
lazy_static = "1.5.0"
dotenv = "0.15.0"

